Bug 40942 and 47816 - fix off-by-one error in DrawComposited sanity check.  r=bryner